Will fix artwork wrap and center upload button

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -1,4 +1,5 @@
 #home-art-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
