--- a/client/src/SignUp.css
+++ b/client/src/SignUp.css
@@ -13,6 +13,13 @@
   margin-top: 1vh;
 }
 
+
 .form-button {
   margin-top: 1vh;
+}
+
+.button-container {
+  display: flex;
+  border: solid red 2px;
+  justify-content: center;
 }
